Add feature gates where appropriate

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -71,7 +71,9 @@
 <div class="search-options">
   <a id="perform-search" class="btn btn-primary btn-large btn-block">{% trans "Search" %}</a>
   <div class="btn-group">
+    {% if request.instance|feature_enabled:'advanced_search_filters' %}
     <button id="search-advanced" class="btn">{% trans "Advanced" %}</button>
+    {% endif %}
     <button id="search-reset" class="btn">{% trans "Reset" %}</button>
   </div>
 </div>
