--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -30,7 +30,7 @@ active
     <div class="row-fluid">
         <div class="span4">
             <div class="account-info">
-                <img class="img-circle img-polaroid user-photo" src="{{STATIC_URL}}img/profile.jpg">
+                <img class="img-circle img-polaroid user-photo" src="{{STATIC_URL}}img/profile.png">
                 <h1>{{ user.username }}</h1>
                 <p>{% trans "User Profile" %}</p>
                 {% usercontent for user %}
