--- a/opentreemap/treemap/css/sass/partials/_createmap.scss
+++ b/opentreemap/treemap/css/sass/partials/_createmap.scss
@@ -6,10 +6,10 @@
 
 		li {
 			a {
-				padding: 0;
+				padding: 6px 10px 12px;
 				margin: 0;
 				border-radius: 0;
-				color: $subtext-color;
+				color: lighten($subtext-color, 25%);
 				border-bottom: 4px solid $light-gray-color;
 
 				&:hover,
@@ -20,7 +20,7 @@
 				}
 
 				&.error-on-tab {
-					border-bottom: 4px solid $alert-color;
+					border-bottom: 4px solid $alert-color !important;
 				}
 			}
 			&.active {
@@ -69,6 +69,30 @@
 		display: block;
 		font-size: 0.75em;
 		color: $subtext-color;
+	}
+}
+
+#pricing-summary {
+	position: relative;
+	top: 20px;
+	left: 60px;
+
+	h5 {
+		padding-bottom: 8px;
+		border-bottom: 1px solid lighten($subtext-color, 35%);
+	}
+	dl {
+		margin: 5px 0 16px;
+
+		dt {
+			font-weight: 700;
+			font-size: 0.75em;
+			margin-bottom: 2px;
+		}
+		dd {
+			margin-left: 0;
+			font-weight: 300;
+		}
 	}
 }
 
