Style edit trees and ecobenefits sidebar on map page

--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -159,6 +159,12 @@
     .addBtn {
         float: right;
         margin-top: -3px;
+        font-weight: 700;
+
+        i {
+            position: relative;
+            left: -3px;
+        }
     }
 }
 
