--- a/opentreemap/treemap/templates/treemap/eco_benefits.html
+++ b/opentreemap/treemap/templates/treemap/eco_benefits.html
@@ -4,7 +4,15 @@
 <div id="benefit-values">
     {% for benefit in benefits %}
     <div class="benefit-value-row">
-      <div class="benefit-icon"><i class="icon-leaf"></i></div>
+      {% if benefit.label == 'Energy' %}
+        <div class="benefit-icon"><i class="icon-flash-1"></i></div>
+      {% elif benefit.label == 'Stormwater' %}
+        <div class="benefit-icon"><i class="icon-tint"></i></div>
+      {% elif benefit.label == 'Air Quality' %}
+        <div class="benefit-icon"><i class="icon-cloud"></i></div>
+      {% else %}
+        <div class="benefit-icon"><i class="icon-sun-filled"></i></div>
+      {% endif %}
       <h3 class="benefit-label">{{ benefit.label }} {% trans "Benefits" %}</h3>
       <dl class="dl-horizontal benefit-content">
         <dt>{{ benefit.value }}</dt>
