Style caccordion in sidebar to show active states

--- a/opentreemap/treemap/css/sass/partials/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/_map.scss
@@ -242,6 +242,7 @@ span.tt-dropdown-menu {
             p {
                 line-height: 1.5em;
                 margin: 0;
+                font-size: 1em;
             }
         }
     }
