Change name of *_ul.html files to reflect new markup

--- a/opentreemap/treemap/templates/treemap/field/diameter_div.html
+++ b/opentreemap/treemap/templates/treemap/field/diameter_div.html
@@ -1,4 +1,4 @@
-{% extends "treemap/field/ul.html" %}
+{% extends "treemap/field/div.html" %}
 {% load i18n %}
 
 {% block label %}{% trans "Trunk Diameter" %}{% endblock %}
