--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -36,15 +36,15 @@
          class="btn btn-mini add-photos">{% trans "Add Photo" %}</a>
       <div id="upload-error" class="text-error" style="display: none"></div>
       <hr>
-      
+
       <h3>{% trans "Latest Update" %}</h3>
 
       <p>
         {{ latest_update.user.username }}
-        {{ latest_update.short_descr }} 
+        {{ latest_update.short_descr }}
         on {{ latest_update.updated|date:request.instance.date_format }}
       </p>
-      
+
       <h5>{{ progress_percent }}% {% trans "Complete" %}</h5>
 
       <div class="progress">
@@ -72,13 +72,17 @@
         {% endfor %}
       </ul>
       <h3>{% trans "Nearby Trees" %}</h3>
-      <ul>
-        {% for plot in plot.nearby_plots %}
-        <li><a href="{% url 'plot_detail' instance_url_name=request.instance.url_name plot_id=plot.pk %}">{{ plot.pk }}</a></li>
-        {% empty %}
-        <li>{% trans "None" %}</li>
-        {% endfor %}
+      {% with nearby=plot.nearby_plots %}
+      {% if nearby %}
       </ul>
+      {% for plot in nearby %}
+        <li><a href="{% url 'plot_detail' instance_url_name=request.instance.url_name plot_id=plot.pk %}">{{ plot.pk }}</a></li>
+      {% endfor %}
+      </ul>
+      {% else %}
+      <div>{% trans "There are no trees nearby" %}</div>
+      {% endif %}
+      {% endwith %}
     </div>
     <div class="span6">
       <h1>{{ tree.species.common_name }}</h1>
