Style Leaflet, remove OL styling

--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -35,6 +35,7 @@
                 > a {
                     background-color: $navbar-color;
                     border-bottom: 4px solid $primary-color;
+                    box-shadow: none;
 
                     &:hover,
                     &:focus {
