--- a/opentreemap/treemap/css/sass/partials/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/_map.scss
@@ -9,194 +9,61 @@
     right: 350px; 
 }
 
-.olPopup {
-    border-radius: 6px;
-    margin-top: 15px;
-    margin-left: -15px;
-    border: 1px solid $well-color !important;
-    overflow: visible !important;
-    box-shadow: 0px 3px 0px rgba(0, 3, 0, 0.3);
-    min-height: 150px;
-    height: auto !important;
+@each $direction in right, left, top {
+    .leaflet-#{$direction} .leaflet-control {
+        margin-#{$direction}: 16px;
+    }
+}
 
-    &:before {
-        content: '';
-        width: 0;
-        height: 0;
-        position: absolute;
-        border-left: 8px solid transparent;
-        border-right: 8px solid transparent;
-        border-bottom: 10px solid $well-color;
-        top: -10px;
-        left: 10px;
+.leaflet-control {
+
+    &.leaflet-control-zoom {
+
+        > a {
+            color: black;
+        }
     }
 
-    .olPopupContent {
-        padding: 12px;
-        margin: 0;
-        width: auto !important;
-        padding-right: 26px;
-        height: auto !important;
-
-        h4 {
-            margin: 0 0 6px;
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 22px;
-            color: $primary-color;
-        }
-        dl {
+    &.leaflet-control-layers {
+        .leaflet-control-layers-list {
             margin: 0;
+        }
+        .leaflet-control-layers-base {
+
+            label {
+                font-size: 1em;
+                padding: 0 5px;
+
+                .leaflet-control-layers-selector {
+                    margin: 0 4px 0 0;
+
+                    & + span {
+                        top: 2px;
+                        position: relative;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.leaflet-popup-close-button {
+    margin-top: 6px;
+    margin-right: 4px;
+}
+
+.leaflet-popup-content {
+    margin: 18px 20px;
+
+    h4 {
+        margin: 0 0 0.5em;
+    }
+    address {
+        margin-bottom: 15px;
+
+        strong {
             clear: both;
-            font-size: 14px;
-
-            dt {
-                text-align: left;
-                width: 100px;
-                color: $subtext-color;
-            }
-            dd {
-                text-align: right;
-                margin-left: 110px;
-            }
-        }
-        address {
-            font-size: em(14px);
-            strong {
-                display: block;
-            }
-        }
-    }
-    .olPopupCloseBox {
-        background: none;
-        margin-right: -20px;
-        margin-top: -4px;
-
-        &:before {
-            content: '\00d7';
-            font-size: 20px;
-            font-weight: bold;
-            line-height: 20px;
-            color: #000000;
-            text-shadow: 0 1px 0 #ffffff;
-            opacity: 0.2;
-        }
-        &:hover:before {
-            opacity: 0.4;
-        }
-    }
-}
-
-div.olControlZoom {
-    top: 14px;
-    left: 14px;
-    background: none;
-
-    a {
-        background: rgba($navbar-color, .75);
-        font-family: 'Open Sans';
-        font-size: 21px;
-        width: 26px;
-        height: 26px;
-        line-height: 25px;
-
-        &:hover {
-            background: rgba($navbar-color, .85);
-            color: white;
-        }
-    }
-}
-
-.olControlLayerSwitcher {
-    top: 16px;
-    right: 16px;
-    width: 12em;
-    font-family: $base-font-family;
-    font-size: $base-font-size;
-    font-weight: 300;
-    color: white;
-    background-color: transparent;
-    margin: 0;
-
-    .layersDiv {
-        padding: 5px 15px 15px;
-        background: rgba($navbar-color, .85);
-        border-radius: 6px;
-
-        .baseLbl, 
-        .dataLbl {
-            margin: 10px 0 2px;
-        }
-        .baseLayersDiv,
-        .dataLayersDiv {
-            padding: 0;
-        }
-
-        input[type="checkbox"],
-        input[type="radio"] {
-            margin: 0 6px 0 0;
-        }
-        label.labelSpan {
-            width: auto;
-            display: inline-block;
-            margin: 0;
-            color: white;
-            font-size: 0.75em;
-        }
-    }
-    .maximizeDiv,
-    .minimizeDiv {
-        width: 18px;
-        height: 18px;
-        top: 5px;
-        right: 0;
-        cursor: pointer;
-
-        > img {
-            display: none;
-        }
-        &:before {
-            font-family: "fontello";
-            font-style: normal;
-            font-weight: normal;
-            right: 8px;
-            position: absolute;
-        }
-    }
-    .maximizeDiv {
-        position: absolute;
-        width: 100px;
-        background: rgba(66, 66, 74, 0.85);
-        padding: 6px 10px 10px;
-        top: 0px;
-        border-radius: 6px;
-        opacity: 0.5;
-
-        &:hover {
-            opacity: 1.0;
-        }
-        &:before {
-            content: '\e8b9';
-            top: 7px;
-        }
-        &:after {
-            content: 'Map Options';
-            font-size: 12px;
-            font-weight: 700;
-        }
-
-        .map-small & {
-            width: 12px;
-
-            &:after {
-                content: none;
-            }
-        }
-    }
-    .minimizeDiv {
-        &:before {
-            content: '\e8b7';
-            top: 2px;
+            display: block;
         }
     }
 }
