Change map page full details button back to anchor, Fixes #508

--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -9,6 +9,7 @@
     <div id="tree-detail" class="accordion-body collapse">
       <div class="accordion-body-buttons">
         <button class="btn" id="full-details-button">Full Details</button>
+        <a class="btn" data-class="display" id="full-details-button">{% trans "Full Details" %}</a>
         <button class="btn" data-class="display" id="edit-details-button"
                 title="{% trans "Editing of the tree details is not available to all users" %}"
                 >Edit Details</button>
